# rust-tdlib

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: build.yml  checks.yml  lint.yml  publish.yml  rust.yml  test.yml
codegen/: Cargo.toml
codegen/src/: main.rs
examples/: auth_bot.rs  handle_auth_errors.rs  handle_auth_state.rs  main.rs  read_updates.rs
rust-tdlib/examples/: main.rs
rust-tdlib/src/: errors.rs
rust-tdlib/src/types/: add_chat_member.rs  add_chat_to_list.rs  add_custom_server_language_pack.rs  add_local_message.rs  add_network_statistics.rs  add_proxy.rs  add_recent_sticker.rs  animation.rs  answer_callback_query.rs  answer_pre_checkout_query.rs  answer_shipping_query.rs  authentication_code_info.rs  authorization_state.rs  auto_download_settings.rs  auto_download_settings_presets.rs  background_fill.rs  bank_card_action_open_url.rs  basic_group.rs  call.rs  call_discard_reason.rs  call_id.rs  call_server.rs  call_server_type.rs  call_state.rs  callback_query_payload.rs  change_sticker_set.rs  chat_action.rs  chat_action_bar.rs  chat_administrator.rs  chat_event_action.rs  chat_event_log_filters.rs  chat_invite_link.rs  chat_member.rs  chat_members.rs  chat_permissions.rs  chat_photos.rs  chat_source.rs  chat_statistics_inviter_info.rs  chat_statistics_message_interaction_info.rs  chats.rs  (+269 more)
src/: errors.rs  lib.rs  tdjson.rs  utils.rs
src/client/: api.rs  auth_handler.rs  client.rs  errors.rs  mod.rs  observer.rs  tdlib_client.rs  tip.rs  worker.rs
src/types/: _common.rs  accent_color.rs  accept_call.rs  accept_terms_of_service.rs  account_ttl.rs  activate_story_stealth_mode.rs  add_application_changelog.rs  add_chat_folder_by_invite_link.rs  add_chat_member.rs  add_chat_members.rs  add_chat_to_list.rs  add_contact.rs  add_custom_server_language_pack.rs  add_favorite_sticker.rs  add_file_to_downloads.rs  add_local_message.rs  add_log_message.rs  add_message_reaction.rs  add_network_statistics.rs  add_proxy.rs  add_recent_sticker.rs  add_recently_found_chat.rs  add_saved_animation.rs  add_saved_notification_sound.rs  add_sticker_to_set.rs  added_reaction.rs  added_reactions.rs  address.rs  allow_bot_to_send_messages.rs  animated_chat_photo.rs  animated_emoji.rs  animation.rs  animations.rs  answer_callback_query.rs  answer_custom_query.rs  answer_inline_query.rs  answer_pre_checkout_query.rs  answer_shipping_query.rs  answer_web_app_query.rs  apply_premium_gift_code.rs  (+1092 more)
tests/: integration_test.rs
