[package]
name = "telegram-tdlib"
version = "0.1.0-beta.0"
authors = ["aCLr <a.ch.clr@gmail.com>"]
description = "TDlib (Telegram Database) client"
homepage = "https://github.com/aCLr/telegram-tdlib"
repository = "https://github.com/aCLr/telegram-tdlib"
license = "MIT"
keywords = [ "telegram", "tdlib" ]
categories = ["api-bindings"]
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE",
  ".gitignore"
]
readme = "README.md"
edition = "2018"

[features]
default = []
client = ["tokio", "lazy_static", "async-trait", "rtdlib-sys", "log"]

[dependencies]
futures = "0.3"

uuid = { version = "0.8", features = ["v4"] }

serde = "1"
serde_derive = "1"
serde_json = "1"

log = { version = "0.4", optional = true }
rtdlib-sys = { version = "0.1", optional = true }
lazy_static = { version = "1.4", optional = true }
tokio = { version = "1", features = ["sync", "rt", "time"], optional = true}
async-trait = { version = "0.1", optional = true }



[dev-dependencies]
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
env_logger = "0.8"