[package]
name = "rust-tdlib"
version = "0.1.0"
authors = ["aCLr <a.ch.clr@gmail.com>"]
description = "TDlib (Telegram Database) client"
homepage = "https://github.com/aCLr/rust-tdlib"
repository = "https://github.com/aCLr/rust-tdlib"
license = "MIT"
keywords = [ "telegram", "tdlib" ]
categories = ["api-bindings"]
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE",
  ".gitignore"
]
readme = "README.md"
edition = "2018"

[features]
client = ["tokio", "lazy_static", "async-trait", "rtdlib-sys", "log"]

[dependencies]
futures = "0.3"

uuid = { version = "0.8", features = ["v4"] }

serde = "1"
serde_derive = "1"
serde_json = "1"

log = { version = "0.4", optional = true }
rtdlib-sys = { version = "0.1", optional = true }
lazy_static = { version = "1.4", optional = true }
tokio = { version = "0.2", features = ["sync", "time", "rt-core", "blocking"], optional = true}
async-trait = { version = "0.1", optional = true }


[dev-dependencies]
tokio = {version = "0.2", features = ["macros", "rt-core", "sync"]}
log = { version = "0.4" }
env_logger = "0.8"